# ETL-Consolidacao-Planilhas

./: .gitignore  README.md  pyproject.toml  root_components_count.py
src/pipeline/: extract.py  main.py  transform.py
tests/: test_pipeline.py
